--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/bundle/Vundle.vim"]
 	path = .vim/bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim.git
+[submodule "/home/luna/.tpm"]
+	path = /home/luna/.tpm
+	url = https://github.com/tmux-plugins/tpm
