--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,5 +15,11 @@ bind -n C-right swap-window -t +1
 #reload config bind
 bind r source-file ~/.tmux.conf \; display 'Reloaded config'
 
-source "/home/adavis/.powerline/powerline/bindings/tmux/powerline.conf"
+source "$HOME/.powerline/powerline/bindings/tmux/powerline.conf"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+run '$HOME/.tpm/tpm'
 
