--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,3 +23,6 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 
 run '$HOME/.tpm/tpm'
 
+set -g default-shell /bin/zsh
+set-option -g default-command /bin/zsh
+
